Segundo commit, incompleto

--- a/Veterinaria.API/appsettings.Development.json
+++ b/Veterinaria.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=BARC; Database=Veterinaria08;Encrypt=False;User Id=hurt;Password=123lapradera"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
