--- a/Veterinaria.API/appsettings.json
+++ b/Veterinaria.API/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=BARC; Database=Veterinaria08;Encrypt=False;User Id=hurt;Password=123lapradera"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
